Restructured tests